force-app/main/default/objects/Supervision_Minutes__c/Supervision_Minutes__c.object-meta.xml
<CustomObject>
    <label>Supervision Minute</label>
    <nameField>
        <label>Supervision Minutes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supervision Minutes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>