force-app/main/default/objects/Supervision_Minutes__c/fields/Additional_comments_capacity__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_capacity__c</fullName>
    <label>Additional comments capacity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>