force-app/main/default/objects/Supervision_Minutes__c/fields/Additional_comments_for_next_4_week__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_for_next_4_week__c</fullName>
    <label>Additional comments for next 4 week</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>