force-app/main/default/objects/Supervision_Minutes__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Audit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Clinical_Audit__c.Audit_Type__c</field>
            <operation>equals</operation>
            <value>Clinical Audit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Clinical_Audit__c</referenceTo>
    <relationshipLabel>Supervision Minutes</relationshipLabel>
    <relationshipName>Supervision_Minutes</relationshipName>
    <type>Lookup</type>
</CustomField>