force-app/main/default/objects/Supervision_Minutes__c/fields/Audit_discussion__c.field-meta.xml
<CustomField>
    <fullName>Audit_discussion__c</fullName>
    <label>Audit discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>