force-app/main/default/objects/Supervision_Minutes__c/fields/Check_in__c.field-meta.xml
<CustomField>
    <fullName>Check_in__c</fullName>
    <label>Check-in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Things are going amazing</fullName>
            </value>
            <value>
                <fullName>Things are going really well</fullName>
            </value>
            <value>
                <fullName>Things are going ok</fullName>
            </value>
            <value>
                <fullName>I&apos;m starting to struggle</fullName>
            </value>
            <value>
                <fullName>I really need some support</fullName>
            </value>
            <value>
                <fullName>Things are going great</fullName>
            </value>
            <value>
                <fullName>Things are going well</fullName>
            </value>
            <value>
                <fullName>Things are going steady</fullName>
            </value>
            <value>
                <fullName>Things are going poorly</fullName>
            </value>
            <value>
                <fullName>Things are going terribly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>