force-app/main/default/objects/Supervision_Minutes__c/fields/Check_in_Team__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Team__c</fullName>
    <label>Check-in Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Things are going great</fullName>
            </value>
            <value>
                <fullName>Things are going well</fullName>
            </value>
            <value>
                <fullName>Things are going steady</fullName>
            </value>
            <value>
                <fullName>Things are going poorly</fullName>
            </value>
            <value>
                <fullName>Things are going terribly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>