force-app/main/default/objects/Supervision_Minutes__c/fields/Check_in_Team_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Team_Discussion__c</fullName>
    <label>Check-in Team Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>