force-app/main/default/objects/Supervision_Minutes__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supervision Minutes (Client)</relationshipLabel>
    <relationshipName>Supervision_Minutes2</relationshipName>
    <type>Lookup</type>
</CustomField>