force-app/main/default/objects/Supervision_Minutes__c/fields/Client_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Client_Discussion__c</fullName>
    <label>Client Discussion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>