force-app/main/default/objects/Supervision_Minutes__c/fields/Client_Question__c.field-meta.xml
<CustomField>
    <fullName>Client_Question__c</fullName>
    <label>Client Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>