force-app/main/default/objects/Supervision_Minutes__c/fields/Development_Goals__c.field-meta.xml
<CustomField>
    <fullName>Development_Goals__c</fullName>
    <label>Development Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>