force-app/main/default/objects/Supervision_Minutes__c/fields/Enough_work_for_next_4_weeks__c.field-meta.xml
<CustomField>
    <fullName>Enough_work_for_next_4_weeks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enough work for next 4 weeks?</label>
    <type>Checkbox</type>
</CustomField>