force-app/main/default/objects/Supervision_Minutes__c/fields/Goal_1__c.field-meta.xml
<CustomField>
    <fullName>Goal_1__c</fullName>
    <label>Goal 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>