force-app/main/default/objects/Supervision_Minutes__c/fields/Goal_2__c.field-meta.xml
<CustomField>
    <fullName>Goal_2__c</fullName>
    <label>Goal 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>