force-app/main/default/objects/Supervision_Minutes__c/fields/Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Goal_3__c</fullName>
    <label>Goal 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>