force-app/main/default/objects/Supervision_Minutes__c/fields/Goal_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Goal_Discussion__c</fullName>
    <label>Goal Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>