force-app/main/default/objects/Supervision_Minutes__c/fields/Have_I_updated_OM_w_clinician_s_capacity__c.field-meta.xml
<CustomField>
    <fullName>Have_I_updated_OM_w_clinician_s_capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have I updated OM w/clinician&apos;s capacity</label>
    <type>Checkbox</type>
</CustomField>