force-app/main/default/objects/Supervision_Minutes__c/fields/Incidents_and_complaints__c.field-meta.xml
<CustomField>
    <fullName>Incidents_and_complaints__c</fullName>
    <label>Incidents and complaints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>