force-app/main/default/objects/Supervision_Minutes__c/fields/Is_my_capacity_up_to_date_and_accurate__c.field-meta.xml
<CustomField>
    <fullName>Is_my_capacity_up_to_date_and_accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is my capacity up to date and accurate</label>
    <type>Checkbox</type>
</CustomField>