force-app/main/default/objects/Supervision_Minutes__c/fields/PCH_Last_Cycle__c.field-meta.xml
<CustomField>
    <fullName>PCH_Last_Cycle__c</fullName>
    <label>KPI Last Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 100%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Less than 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>