force-app/main/default/objects/Supervision_Minutes__c/fields/PCH_Last_Week_Comments__c.field-meta.xml
<CustomField>
    <fullName>PCH_Last_Week_Comments__c</fullName>
    <label>KPI Last Week Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>