force-app/main/default/objects/Supervision_Minutes__c/fields/People_Management_Discussion__c.field-meta.xml
<CustomField>
    <fullName>People_Management_Discussion__c</fullName>
    <label>People Management Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>