force-app/main/default/objects/Supervision_Minutes__c/fields/Shadowed_sessions_since_last_supervision__c.field-meta.xml
<CustomField>
    <fullName>Shadowed_sessions_since_last_supervision__c</fullName>
    <label>Shadowed sessions since last supervision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>