force-app/main/default/objects/Supervision_Minutes__c/fields/Special_Interest_Group_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Special_Interest_Group_Supervision__c</fullName>
    <label>Special Interest/Group Supervision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>