force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Audit__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Audit__c</fullName>
    <label>Supervisee Assessment Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Team Members conform</fullName>
            </value>
            <value>
                <fullName>Most Team Members conform</fullName>
            </value>
            <value>
                <fullName>Support Required - See Action Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>