force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Audit_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Audit_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supervisee Assessment Audit Reviewed by supervisor</description>
    <label>Supervisee Assessment Audit Reviewed</label>
    <type>Checkbox</type>
</CustomField>