force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_C_I_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_C_I_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supervisee Assessment Complaint/Incident Reviewed by supervisor</description>
    <label>Supervisee Assessment C/I Reviewed</label>
    <type>Checkbox</type>
</CustomField>