force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Cap_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Cap_Discussion__c</fullName>
    <description>Supervisee Assessment Capacity per DS discussion</description>
    <label>Supervisee Assessment Cap Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>