force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Capacity_per_DS__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Capacity_per_DS__c</fullName>
    <label>Supervisee Assessment Capacity per DS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All capacity is up to date - no BD needs</fullName>
            </value>
            <value>
                <fullName>All capacity is up to date - See BD Needs</fullName>
            </value>
            <value>
                <fullName>Capacity is not yet fully updated - Actions required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>