force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Complaint_Incident__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Complaint_Incident__c</fullName>
    <description>Supervisee Assessment Complaints and Incidents</description>
    <label>Supervisee Assessment Complaint/Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All incidents and complaints reviewed and managed</fullName>
            </value>
            <value>
                <fullName>No incidents and complaints to review</fullName>
            </value>
            <value>
                <fullName>Action required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>