force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Discussion__c</fullName>
    <label>Supervisee Assessment Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>