force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_DM_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_DM_Discussion__c</fullName>
    <description>Supervisee Assessment DM Report Discussion</description>
    <label>Supervisee Assessment DM Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>