force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_DM_report__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_DM_report__c</fullName>
    <label>Supervisee Assessment DM report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Everyone is forecasting well</fullName>
            </value>
            <value>
                <fullName>Most people are foreasting well</fullName>
            </value>
            <value>
                <fullName>Some people are forecasting well</fullName>
            </value>
            <value>
                <fullName>Support is needed for better forecasting - see discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>