force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_FS_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_FS_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supervisee Assessment Feedback Survey Reviewed by supervisor</description>
    <label>Supervisee Assessment FS Reviewed</label>
    <type>Checkbox</type>
</CustomField>