force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_Survey_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_Survey_Feedback__c</fullName>
    <label>Supervisee Assessment Survey Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey Scores are above 70%</fullName>
            </value>
            <value>
                <fullName>Survey Scores are below 70%</fullName>
            </value>
            <value>
                <fullName>No Survey Scores Recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>