force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_TL__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_TL__c</fullName>
    <label>Supervisee Assessment TL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team are all achieving</fullName>
            </value>
            <value>
                <fullName>Team are mostly achieving</fullName>
            </value>
            <value>
                <fullName>Team are not yet consistently achieving</fullName>
            </value>
            <value>
                <fullName>Team are struggling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>