force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Assessment_TL_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Assessment_TL_Discussion__c</fullName>
    <description>Supervisee Assessment Team Leader Supervisor Discussion</description>
    <label>Supervisee Assessment TL Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>