force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Flexi_Budget_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Flexi_Budget_Picklist__c</fullName>
    <label>Supervisee Flexi Budget Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>Support Plan</fullName>
            </value>
            <value>
                <fullName>Mid Prob Review</fullName>
            </value>
            <value>
                <fullName>Probation review</fullName>
            </value>
            <value>
                <fullName>Business Dev</fullName>
            </value>
            <value>
                <fullName>Performance Review</fullName>
            </value>
            <value>
                <fullName>Supervisor Add Travel</fullName>
            </value>
            <value>
                <fullName>RM Spec Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>