force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Flexi_Needs_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Flexi_Needs_Discussion__c</fullName>
    <label>Supervisee Flexi Needs Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>