force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisee_Support__c.field-meta.xml
<CustomField>
    <fullName>Supervisee_Support__c</fullName>
    <label>Supervisee Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>