force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisor_Review_Flexi_Budget__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Review_Flexi_Budget__c</fullName>
    <label>Supervisor Review Flexi Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexi budget hours match with requested amount</fullName>
            </value>
            <value>
                <fullName>Flexi budget hours exceeded requested amount</fullName>
            </value>
            <value>
                <fullName>Flexi budget hours were less than requested amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>