force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisor_Review_Flexi_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Review_Flexi_Discussion__c</fullName>
    <label>Supervisor Review Flexi Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>