force-app/main/default/objects/Supervision_Minutes__c/fields/Supervisor_Support__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Support__c</fullName>
    <label>Supervisor Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>