force-app/main/default/objects/Supervision_Minutes__c/fields/TL_Site_Culture_Rating__c.field-meta.xml
<CustomField>
    <fullName>TL_Site_Culture_Rating__c</fullName>
    <label>TL Site Culture Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Site Culture is Excellent</fullName>
            </value>
            <value>
                <fullName>The Site Culture is Good</fullName>
            </value>
            <value>
                <fullName>The Site Culture needs work</fullName>
            </value>
            <value>
                <fullName>The Site Culture is a concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>