force-app/main/default/objects/Supervision_Minutes__c/fields/TL_Site_Culture_Rating_Discussion__c.field-meta.xml
<CustomField>
    <fullName>TL_Site_Culture_Rating_Discussion__c</fullName>
    <label>TL Site Culture Rating Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>