force-app/main/default/objects/Supervision_Minutes__c/fields/Upcoming_leave_planning__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_leave_planning__c</fullName>
    <label>Upcoming leave planning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>