force-app/main/default/objects/Supervision_Minutes__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Getting Sh*t Done</fullName>
            </value>
            <value>
                <fullName>Loving What I Do</fullName>
            </value>
            <value>
                <fullName>Frankly Giving a Damn</fullName>
            </value>
            <value>
                <fullName>Being People People</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>