force-app/main/default/objects/Supervision_Minutes__c/fields/Values_Comments__c.field-meta.xml
<CustomField>
    <fullName>Values_Comments__c</fullName>
    <label>Values Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>