force-app/main/default/objects/Supervision_Minutes__c/recordTypes/Supervision_Agenda.recordType-meta.xml
<RecordType>
    <fullName>Supervision_Agenda</fullName>
    <active>true</active>
    <label>Supervision Agenda</label>
</RecordType>