force-app/main/default/objects/Supervision_Minutes__c/recordTypes/Supervision_Agendas.recordType-meta.xml
<RecordType>
    <fullName>Supervision_Agendas</fullName>
    <active>true</active>
    <label>Supervision Agendas</label>
</RecordType>