force-app/main/default/objects/Supervision_Minutes__c/recordTypes/Team_Performance_Agenda.recordType-meta.xml
<RecordType>
    <fullName>Team_Performance_Agenda</fullName>
    <active>true</active>
    <label>Team Performance Agenda</label>
</RecordType>