force-app/main/default/objects/Supervision_Minutes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supervisor__c</columns>
    <columns>Supervisee__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>