force-app/main/default/objects/Supervision_Minutes__c/listViews/All_Supervision_Minute_Template.listView-meta.xml
<ListView>
    <fullName>All_Supervision_Minute_Template</fullName>
    <columns>NAME</columns>
    <columns>Supervisee__c</columns>
    <columns>Supervisor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supervisee__c</field>
        <operation>equals</operation>
        <value>Carmen Francis</value>
    </filters>
    <filters>
        <field>Supervisor__c</field>
        <operation>equals</operation>
        <value>Hannah Young</value>
    </filters>
    <label>All Supervision Minute Template</label>
</ListView>