force-app/main/default/objects/Supervision_Minutes__c/listViews/My_Supervisee_s_Minutes.listView-meta.xml
<ListView>
    <fullName>My_Supervisee_s_Minutes</fullName>
    <columns>NAME</columns>
    <columns>Supervisor__c</columns>
    <columns>Supervisee__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supervisor__c</field>
        <operation>equals</operation>
        <value>Matthew Ernst</value>
    </filters>
    <label>My Supervisee&apos;s Minutes</label>
</ListView>